--- a/app/css/_global.scss
+++ b/app/css/_global.scss
@@ -41,4 +41,23 @@ a {
 
     transform: scale(1.2);
   }
-  
+  //copyright
+
+  .copyright {
+    width: 100%;
+    padding: 8px 100px;
+    background: rgb(236, 232, 215);
+    
+
+} 
+.copyright p {
+    font-family: $ff-baloo;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+}
+@media(max-width:991px) {
+    .copyright {
+        padding: 8px 40px;
+    }
+}
