--- a/app/css/_nav.scss
+++ b/app/css/_nav.scss
@@ -20,7 +20,7 @@
         position: relative;
         .searchbox {
             padding:20px;
-            width: 356px;
+            width: 300px;
             height: 49px;
             border-start-start-radius: 10px;
             border-end-start-radius: 10px;
@@ -65,6 +65,7 @@
             border-bottom-right-radius: 10px;
             width: 50px;
             height: 49px;
+            cursor: pointer;
         }
     }
     .nav-shop {
@@ -129,7 +130,7 @@
     }
 }
 
-@media (max-width:820px) {
+@media (max-width:760px) {
     .nav {
         position: relative;
         .nav-upper {
@@ -217,6 +218,24 @@
                 border-radius: 0;
                 border-top-right-radius: 10px;
                 border-bottom-right-radius: 10px;
+            }
+        }
+    }
+}
+@media (max-width:370px){
+    .nav {
+        &-upper {
+            padding-left: 0;
+        }
+    }
+}
+@media (max-width:768){
+    .nav {
+        &-upper {
+            .nav-search {
+                .active{
+                    width: 424px;
+                }
             }
         }
     }
