--- a/app/css/_product.scss
+++ b/app/css/_product.scss
@@ -8,7 +8,7 @@
     background-position: top center;
     background-size: contain;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     &-text {
         display: flex;
@@ -111,4 +111,46 @@
       .bar2 {
         background-color: rgb(149, 147, 147);
       }
+}
+//adjust
+@media(max-width: 1184px) {
+    .product {
+        &-sales {
+            .item{
+                &:last-child {
+                    display:none;
+                }
+            }
+        }
+    }
+}
+//tablet 
+@media (max-width: 768px){
+    .product {
+        height: 100%;
+        &-sales {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        &-sales {
+            .item{
+                margin-right: 0;
+                &:last-child{
+                    display: flex;
+                }
+            }
+        }
+        &-sales {
+            .item{
+             
+                    margin-bottom: 100px;
+               
+            }
+        }
+        .next-attribute{
+            display: none;
+        }
+    }
 }
